src/app/components/draggable-space-object/draggable-space-object.component.scss
.cursor-grab {
  cursor: grab;
}

.draggable-body {
  width: 0;
  height: 0;

  position: absolute;
  user-select: none;

  & > *:first-child {
    position: relative;
    left: -50%;
    top: -50%;
  }
}

.label-space-object {
  color: var(--color-text-map-green);
  text-align: center;

  position: absolute;
  top: 50%;
  --width: 140px;
  left: calc(-.5 * var(--width));
  min-width: var(--width);

  width: 100%;
  pointer-events: none;
}

.edit-button {
  position: absolute;
  left: 25%;
  top: 0;

  width: max-content;
  min-width: unset !important;
  height: auto !important;
  padding: 6px;

  color: var(--color-text-map-green) !important;
  background-color: rgba(var(--color-rgb-text-map-green), .1) !important;
  border-radius: 50px !important;
  border: 1px solid rgba(var(--color-rgb-text-map-green), .3) !important;

  mat-icon {
    margin-right: 0 !important;
  }
}

